correction SONAR