@@ -13,7 +13,6 @@ import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Service fournissant les comptes
@@ -58,6 +57,6 @@ public class ComptesService implements IComptesAppProvider {
 					.transform(comptes ->
 							comptes.stream()
 								.sorted(Comparator.comparingInt(CompteBancaire::getOrdre))
-								.collect(Collectors.toList()));
+								.toList());
 	}
 }
